--- a/.release-it.json
+++ b/.release-it.json
@@ -1,27 +1,30 @@
 {
-	"git": {
-		"requireCleanWorkingDir": true,
-		"requireUpstream": true,
-		"requireCommits": true,
-		"addUntrackedFiles": false,
-		"commit": true,
-		"commitMessage": "Release ${version}",
-		"commitArgs": "-S",
-		"tag": true,
-		"tagName": "v${version}",
-		"tagAnnotation": "Release ${version}",
-		"tagArgs": "-s",
-		"push": true,
-		"pushArgs": "--follow-tags",
-		"pushRepo": "origin"
-	},
-	"npm": {
-		"publish": false
-	},
-	"plugins": {
-		"@release-it/conventional-changelog": {
-			"preset": "angular",
-			"infile": "CHANGELOG.md"
-		}
-	}
+  "hooks": {
+    "after:bump": ["yarn run format"]
+  },
+  "git": {
+    "requireCleanWorkingDir": true,
+    "requireUpstream": true,
+    "requireCommits": true,
+    "addUntrackedFiles": false,
+    "commit": true,
+    "commitMessage": "Release ${version}",
+    "commitArgs": "-S",
+    "tag": true,
+    "tagName": "v${version}",
+    "tagAnnotation": "Release ${version}",
+    "tagArgs": "-s",
+    "push": true,
+    "pushArgs": "--follow-tags",
+    "pushRepo": "origin"
+  },
+  "npm": {
+    "publish": false
+  },
+  "plugins": {
+    "@release-it/conventional-changelog": {
+      "preset": "angular",
+      "infile": "CHANGELOG.md"
+    }
+  }
 }
